# ndp

./: Changes  INFO  Makefile  README  VERSION  config.status  configure  configure.in  header  ndp.conf
include/: channel.h  command.h  conf.h  ctrl.h  defs.h.in  irc.h  msger.h  ndp.h  ndp_local.h  parser.h  passwd.h  prototype.h  socket.h  std.h  util.h
src/: Makefile.in  alloca.c  cmpt.c  command  command.c  conf.c  config.h  ctrl.c  getopt.c  getopt1.c  irc.c  md5.c  messager.c  ndp.c  ndp.par.c  ndp.par.template  ndp.tab.h  ns-cache.c  parseconf.c  parser.c  passwd.c  passwd_gen.c  socket.c  time.c  usage.c  util.c
